<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameDev</string>
    <string name="wake_lock">WAKE LOCK</string>
    <string name="game">Game</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>
    <string name="aboutme">About Me</string>
    <string name="aboutMeText">Soy Carlos Piñan y este es el juego presentado en:\n\nGame Dev Conference Peru el 16 de junio.\n\nVersion 1.0</string>
    <string name="nickname">Your nickname: </string>
    <string name="player">Player</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="difficult">Select the difficult level: </string>
    <string name="character">Choose your character: </string>
    <string name="version">1.0</string>
    <string name="finish">Finish!!!!!!!!</string>
    <string name="finalscore">Your final score is:</string>
    <string name="send">Publish</string>
    <string name="close">Close</string>
    <string name="level">Level</string>
    <string name="noConnection">No connection available</string>
    <string name="uploadingScore">Your score is sending.</string>
    <string name="scoreSubmitted">Score submitted.</string>
    <string name="cancelScore">Score submition has been cancelled.</string>
    <string name="playerMario">Mario Kart</string>
    <string name="playerYoshi">Yoshi Kart</string>
    <string name="playerUSMP">USMP Kart</string>
    <string name="publishScore">Publish score?</string>

</resources>