<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnGame"
        style="@style/buttonMenu"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:background="@drawable/button"
        android:text="@string/game" />

    <Button
        android:id="@+id/btnScore"
        style="@style/buttonMenu"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/marginTopButton"
        android:background="@drawable/button"
        android:text="@string/score" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/buttonMenu"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/marginTopButton"
        android:background="@drawable/button"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnAboutMe"
        style="@style/buttonMenu"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/marginTopButton"
        android:background="@drawable/button"
        android:text="@string/aboutme" />

</LinearLayout>